--- a/Blazor.PwaTemplate.Client.styles.css
+++ b/Blazor.PwaTemplate.Client.styles.css
@@ -1,2 +1,3 @@
+@import '_content/Blazor.Scanner.Client/Blazor.Scanner.Client.bundle.scp.css';
 @import '_content/Blazor.Infrastructure.Client/Blazor.Infrastructure.Client.bundle.scp.css';
 
