--- a/Blazor.PwaTemplate.Client.styles.css
+++ b/Blazor.PwaTemplate.Client.styles.css
@@ -1,3 +1,5 @@
+@import '_content/Blazor.Upload.Pwa.Shared/Blazor.Upload.Pwa.Shared.bundle.scp.css';
 @import '_content/Blazor.Scanner.Client/Blazor.Scanner.Client.bundle.scp.css';
+@import '_content/Blazor.Upload.Client/Blazor.Upload.Client.bundle.scp.css';
 @import '_content/Blazor.Infrastructure.Client/Blazor.Infrastructure.Client.bundle.scp.css';
 
