--- a/Blazor.PwaTemplate.Client.styles.css
+++ b/Blazor.PwaTemplate.Client.styles.css
@@ -2,6 +2,7 @@
 @import '_content/Blazor.KeyboardInput.Client/Blazor.KeyboardInput.Client.bundle.scp.css';
 @import '_content/Blazor.PlayAudio.Client/Blazor.PlayAudio.Client.bundle.scp.css';
 @import '_content/Blazor.Scanner.Client/Blazor.Scanner.Client.bundle.scp.css';
+@import '_content/Blazor.Timer.Client/Blazor.Timer.Client.bundle.scp.css';
 @import '_content/Blazor.Upload.Client/Blazor.Upload.Client.bundle.scp.css';
 @import '_content/Blazor.Infrastructure.Client/Blazor.Infrastructure.Client.bundle.scp.css';
 
