--- a/Blazor.PwaTemplate.Client.styles.css
+++ b/Blazor.PwaTemplate.Client.styles.css
@@ -1,4 +1,5 @@
 @import '_content/Blazor.AutomaticLogout.Client/Blazor.AutomaticLogout.Client.tbwmlct44p.bundle.scp.css';
+@import '_content/Blazor.BarcodeReader.Android.Client/Blazor.BarcodeReader.Android.Client.7y1kr6zlj9.bundle.scp.css';
 @import '_content/Blazor.Infrastructure.Client/Blazor.Infrastructure.Client.5ne4giwpu3.bundle.scp.css';
 @import '_content/Blazor.KeyboardInput.Client/Blazor.KeyboardInput.Client.v13140cm0w.bundle.scp.css';
 @import '_content/Blazor.LocalStorage.Client/Blazor.LocalStorage.Client.uiugvrcxw7.bundle.scp.css';
